JumpScript/tests/baselines/reference/parserGreaterThanTokenAmbiguity7.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity7.jump(1,6): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity7.jump (1 errors) ====
    1 >> > 2;
         ~
!!! error TS1109: Expression expected.